# Chatbot-rosytalk

./: .gitignore  AMELIORATIONS_FINALES_v1.5.0.md  AMELIORATIONS_IMAGES_v1.5.1.md  AMELIORATIONS_v1.1.md  AMELIORATIONS_v1.4.1.md  AMELIORATIONS_v1.4.3.md  AMELIORATIONS_v3.9.0_TERMINÉ.md  AMELIORATION_ARRIERE_PLAN.md  API_CONFIGURATION.md  APK_PRET.md  APK_PRET_ICI.txt  APK_SIGNE_FINAL.txt  BUILD_AND_RELEASE.sh  BUILD_INSTRUCTIONS.md  CHANGELOG_v3.0.0.md  CHANGEMENTS_v1.4.md  CMakeLists.txt  COHERENCE_PARFAITE_v1.3.md  COMMENT_COMPILER.txt  COMMIT_MESSAGE_v3.8.0.txt  COMPILE_ET_RELEASE.sh  CORRECTIONS_CRITIQUES_v1.3.1.md  CORRECTIONS_v1.2.md  CORRECTIONS_v1.4.4.md  CREATE_RELEASE_v5.0.0.sh  FEATURES.md  FICHIERS_IMPORTANTS.txt  FIREBASE_SETUP.md  FIX_INSTALLATION_v1.5.1.md  FIX_SIGNATURE_V2_DEFINITIF.md  FIX_v1.4.2.md  FIX_v1.4.5.md  GROQ_API_SETUP.md  GUIDE_COMPILATION_ET_RELEASE.md  GUIDE_COMPILATION_RELEASE.md  GUIDE_DEMARRAGE_RAPIDE.md  GUIDE_MODELES_LOCAUX.md  GUIDE_MOTEURS_IA_v3.0.0.md  GUIDE_NSFW_v3.0.0.md  GUIDE_TEST_IA_v3.8.0.md  (+93 more)
.github/workflows/: build-apk.yml
app/: CMakeLists.txt  build.gradle.kts  google-services.json.example  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/roleplayai/chatbot/data/ai/: ILlamaNativeService.aidl
app/src/main/cpp/: jni_interface.cpp  llama-android.cpp
app/src/main/java/com/roleplayai/chatbot/: MainActivity.kt  RolePlayAIApplication.kt
app/src/main/java/com/roleplayai/chatbot/data/ai/: AIEngine.kt  AIOrchestrator.kt  AIOrchestrator.kt.disabled  BundledLlamaModel.kt  CoherentResponseSystem.kt  ContextualResponseGenerator.kt  ConversationContext.kt  GeminiAIEngine.kt  GeminiEngine.kt  GeminiNanoEngine.kt  GeminiNanoEngine.kt.disabled  GroqAIEngine.kt  HuggingFaceAIEngine.kt  IntelligentResponseGenerator.kt  KoboldAIEngine.kt  LlamaCppEngine.kt  LlamaNativeClient.kt  LlamaNativeService.kt  LocalAIEngine.kt  LocalAIEngineExtensions.kt  OpenRouterAIEngine.kt  OpenRouterEngine.kt  OptimizedLocalLLM.kt.disabled  PromptOptimizer.kt  ResponseValidator.kt  SmartLocalAI.kt  TextGenWebUIEngine.kt  TogetherAIEngine.kt
app/src/main/java/com/roleplayai/chatbot/data/api/: AIService.kt
app/src/main/java/com/roleplayai/chatbot/data/auth/: AuthManager.kt  AuthManagerSimple.kt  FirebaseUserSync.kt  LocalAuthManager.kt  UserDataStore.kt
app/src/main/java/com/roleplayai/chatbot/data/download/: ModelDownloader.kt
app/src/main/java/com/roleplayai/chatbot/data/manager/: GroqKeyManager.kt  SharedGroqKeysManager.kt
app/src/main/java/com/roleplayai/chatbot/data/memory/: ConversationMemory.kt
app/src/main/java/com/roleplayai/chatbot/data/model/: Character.kt  Message.kt  ModelConfig.kt  User.kt
app/src/main/java/com/roleplayai/chatbot/data/preferences/: PreferencesManager.kt
app/src/main/java/com/roleplayai/chatbot/data/repository/: CharacterRepository.kt  ChatDataStore.kt  ChatRepository.kt  ModelRepository.kt
app/src/main/java/com/roleplayai/chatbot/ui/components/: ImageViewer.kt  RichMessageText.kt
app/src/main/java/com/roleplayai/chatbot/ui/navigation/: Navigation.kt
app/src/main/java/com/roleplayai/chatbot/ui/screen/: AdminUsersScreen.kt  AuthScreen.kt  CharacterListScreen.kt  CharacterProfileScreen.kt  ChatScreen.kt  ChatsScreen.kt  ExplorerScreen.kt  LoginScreen.kt  MainScreen.kt  ModelSelectionScreen.kt  ProfileScreen.kt  SettingsScreen.kt  SplashScreen.kt  UserProfileScreen.kt
app/src/main/java/com/roleplayai/chatbot/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/roleplayai/chatbot/ui/viewmodel/: AdminViewModel.kt  AuthViewModel.kt  CharacterViewModel.kt  ChatViewModel.kt  ModelViewModel.kt  SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
llama_models/: build.gradle.kts
llama_models/src/main/: AndroidManifest.xml
release-v3.8.0/: AMELIORATIONS_IA_LOCALE_v3.8.0.md
